--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,6 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
+        <img src="{{ site.baseurl }}public/profile_picture.jpg" alt="hi" class="inline"/>
         <a href="{{ site.url }}">
           {{ site.title }}
         </a>
