--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,11 +2,11 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <img src="{{ site.baseurl }}v3/public/profile_picture.png" alt="hi" class="inline"/>
         <a href="{{ site.url }}">
           {{ site.title }}
         </a>
       </h1>
+      <img src="{{ site.baseurl }}public/profile_picture.png" alt="hi" class="inline"/>
       <p class="lead">{{ site.description }}</p>
     </div>
 
