--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
           {{ site.title }}
         </a>
       </h1>
-      <img src='{{"/v3/public/profile_picture.png" | absolute_url}}' alt='{{"/v3/public/profile_picture.png" | absolute_url}}'>
+      <img src='../public/' alt='../public/'>
       <p class="lead">{{ site.description }}</p>
     </div>
 
