--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
           {{ site.title }}
         </a>
       </h1>
-      <img src='../public/' alt='../public/'>
+     <img src="{{ site.baseurl }}public/profile_picture.png" alt="{{ site.baseurl }}public/profile_picture.png" class="inline"/>
       <p class="lead">{{ site.description }}</p>
     </div>
 
