--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
           {{ site.title }}
         </a>
       </h1>
-     <img src="{{ site.baseurl }}public/profile_picture.png" alt="{{ site.baseurl }}public/profile_picture.png" class="inline"/>
+     <img src="https://github.com/diogolpires/diogolpires.github.io/blob/v3/public/profile_picture.png" alt="hi" class="inline"/>
       <p class="lead">{{ site.description }}</p>
     </div>
 
