--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
           {{ site.title }}
         </a>
       </h1>
-     <img src={{ 'public/profile_picture.jpg' | absolute_url }} alt="hii" class="inline"/>
+     <img src={{ 'public/profile_pic.jpg' | absolute_url }} alt="hii" class="inline"/>
       <p class="lead">{{ site.description }}</p>
     </div>
 
