--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img src={{ 'public/profile_pic.jpg' | absolute_url }} alt="Diogo Pires" width="200" class="inline"/>
+      <img src={{ 'public/profile_pic.jpg' | absolute_url }} alt="Diogo Pires" width="200" class="inline" style="display: block; margin: auto;"/>
       <h1>
         <a href="{{ site.url }}">
           {{ site.title }}
